--- a/appveyor.yml
+++ b/appveyor.yml
@@ -3,7 +3,7 @@ version: '{build}'
 configuration: Release
 
 install:
- - nuget install Xamarin
+ - # nuget install Xamarin
  - nuget install Embeddinator-4000
 
 build: 
