--- a/libWindbot/libWindbot.csproj
+++ b/libWindbot/libWindbot.csproj
@@ -144,14 +144,16 @@
     <PackageReference Include="Embeddinator-4000">
       <Version>0.4.0</Version>
     </PackageReference>
-    <PackageReference Include="Xamarin.Android.Support.v7.AppCompat" Version="25.4.0.2" />
+    <PackageReference Include="Xamarin.Android.Support.v7.AppCompat">
+      <Version>25.4.0.2</Version>
+    </PackageReference>
   </ItemGroup>
   <ItemGroup />
   <Import Project="$(MSBuildExtensionsPath)\Xamarin\Android\Xamarin.Android.CSharp.targets" />
   <PropertyGroup>
     <PostBuildEvent>set E4K_OUTPUT="$(SolutionDir)output"
 if exist %25E4K_OUTPUT%25 rmdir /S /Q %25E4K_OUTPUT%25
-"C:\Users\Mercury\.nuget\packages\embeddinator-4000\0.4.0\tools\Embeddinator-4000.exe" "$(TargetPath)" --gen=Java --platform=Android --outdir=%25E4K_OUTPUT%25 -c -v
+"%HOMEPATH%\.nuget\packages\embeddinator-4000\0.4.0\tools\Embeddinator-4000.exe" "$(TargetPath)" --gen=Java --platform=Android --outdir=%25E4K_OUTPUT%25 -c -v
 </PostBuildEvent>
   </PropertyGroup>
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
