--- a/appveyor.yml
+++ b/appveyor.yml
@@ -2,15 +2,17 @@ version: '{build}'
 skip_tags: true
 
 environment:
-  ANDROID_HOME: C:\android-sdk 
+  ANDROID_HOME: C:\Program Files (x86)\Android\android-sdk
   JAVA_HOME: C:\Program Files\Java\jdk1.8.0
 
 configuration: Release
 
 install:
-  - mkdir %ANDROID_HOME%
+  - mkdir -p %ANDROID_HOME%
   - curl --retry 5 --connect-timeout 30 --location --remote-header-name --remote-name https://dl.google.com/android/repository/tools_r25.2.5-windows.zip
   - 7z x -o%ANDROID_HOME% tools_r25.2.5-windows.zip
+
+  - echo y | %ANDROID_HOME%\tools\android update sdk --no-ui --all --filter "android-25"
 
   - nuget install Embeddinator-4000
 
