--- a/appveyor.yml
+++ b/appveyor.yml
@@ -12,6 +12,9 @@ install:
   # - 7z x -oandroid-sdk tools_r25.2.5-windows.zip
   # - mv -f android-sdk "C:\Program Files (x86)\Android"
 
+  - echo y | "%ANDROID_HOME%\tools\android" update sdk --no-ui --all --filter "platform-tools"
+  - echo y | "%ANDROID_HOME%\tools\android" update sdk --no-ui --all --filter "tools"
+  - echo y | "%ANDROID_HOME%\tools\android" update sdk --no-ui --all --filter "build-tools-27.0.3"
   - echo y | "%ANDROID_HOME%\tools\android" update sdk --no-ui --all --filter "android-27"
 
   - nuget install Embeddinator-4000
