--- a/appveyor.yml
+++ b/appveyor.yml
@@ -14,8 +14,8 @@ install:
 
   - echo y | "%ANDROID_HOME%\tools\android" update sdk --no-ui --all --filter "platform-tools"
   - echo y | "%ANDROID_HOME%\tools\android" update sdk --no-ui --all --filter "tools"
-  - echo y | "%ANDROID_HOME%\tools\android" update sdk --no-ui --all --filter "build-tools-27.0.3"
-  - echo y | "%ANDROID_HOME%\tools\android" update sdk --no-ui --all --filter "android-27"
+  # - echo y | "%ANDROID_HOME%\tools\android" update sdk --no-ui --all --filter "build-tools-27.0.3"
+  - echo y | "%ANDROID_HOME%\tools\android" update sdk --no-ui --all --filter "android-25"
 
   - nuget install Embeddinator-4000
 
