--- a/appveyor.yml
+++ b/appveyor.yml
@@ -8,13 +8,12 @@ environment:
 configuration: Release
 
 install:
-  # - curl --retry 5 --connect-timeout 30 --location --remote-header-name --remote-name https://dl.google.com/android/repository/tools_r25.2.5-windows.zip
-  # - 7z x -oandroid-sdk tools_r25.2.5-windows.zip
-  # - mv -f android-sdk "C:\Program Files (x86)\Android"
+  - curl --retry 5 --connect-timeout 30 --location --remote-header-name --remote-name https://dl.google.com/android/repository/android-ndk-r10e-windows-x86_64.zip
+  - 7z x -y android-ndk-r10e-windows-x86_64.zip
+  - mv -f android-ndk-r10e C:\ProgramData\Microsoft\AndroidNDK
 
   - echo y | "%ANDROID_HOME%\tools\android" update sdk --no-ui --all --filter "platform-tools"
   - echo y | "%ANDROID_HOME%\tools\android" update sdk --no-ui --all --filter "tools"
-  # - echo y | "%ANDROID_HOME%\tools\android" update sdk --no-ui --all --filter "build-tools-27.0.3"
   - echo y | "%ANDROID_HOME%\tools\android" update sdk --no-ui --all --filter "android-25"
 
   - nuget install Embeddinator-4000
