--- a/appveyor.yml
+++ b/appveyor.yml
@@ -9,7 +9,7 @@ configuration: Release
 
 install:
   - curl --retry 5 --connect-timeout 30 --location --remote-header-name --remote-name https://dl.google.com/android/repository/android-ndk-r10e-windows-x86_64.zip
-  - 7z x -y android-ndk-r10e-windows-x86_64.zip
+  - 7z x -y -oC:\ProgramData\Microsoft\AndroidNDK android-ndk-r10e-windows-x86_64.zip
   - mv -f android-ndk-r10e C:\ProgramData\Microsoft\AndroidNDK
 
   - echo y | "%ANDROID_HOME%\tools\android" update sdk --no-ui --all --filter "platform-tools"
