--- a/appveyor.yml
+++ b/appveyor.yml
@@ -15,10 +15,11 @@ install:
   - echo y | "%ANDROID_HOME%\tools\android" update sdk --no-ui --all --filter "platform-tools"
   - echo y | "%ANDROID_HOME%\tools\android" update sdk --no-ui --all --filter "tools"
   - echo y | "%ANDROID_HOME%\tools\android" update sdk --no-ui --all --filter "android-25"
+  - echo y | "%ANDROID_HOME%\tools\android" update sdk --no-ui --all --filter "android-ndk-r10e"
 
-  - echo y | "C:\ProgramData\Microsoft\AndroidNDK\android-ndk-r10e\tools\android" update sdk --no-ui --all --filter "platform-tools"
-  - echo y | "C:\ProgramData\Microsoft\AndroidNDK\android-ndk-r10e\tools\android" update sdk --no-ui --all --filter "tools"
-  - echo y | "C:\ProgramData\Microsoft\AndroidNDK\android-ndk-r10e\tools\android" update sdk --no-ui --all --filter "android-23"
+  # - echo y | "C:\ProgramData\Microsoft\AndroidNDK\android-ndk-r10e\tools\android" update sdk --no-ui --all --filter "platform-tools"
+  # - echo y | "C:\ProgramData\Microsoft\AndroidNDK\android-ndk-r10e\tools\android" update sdk --no-ui --all --filter "tools"
+  # - echo y | "C:\ProgramData\Microsoft\AndroidNDK\android-ndk-r10e\tools\android" update sdk --no-ui --all --filter "android-23"
 
   - nuget install Embeddinator-4000
 
