--- a/appveyor.yml
+++ b/appveyor.yml
@@ -14,9 +14,9 @@ install:
 
   - echo y | "%ANDROID_HOME%\tools\android" update sdk --no-ui --all --filter "platform-tools"
   - echo y | "%ANDROID_HOME%\tools\android" update sdk --no-ui --all --filter "tools"
-  - echo y | %ANDROID_HOME%\tools\android update sdk --no-ui --all --filter "build-tools-25.0.0"
+  - echo y | "%ANDROID_HOME%\tools\android" update sdk --no-ui --all --filter "build-tools-25.0.0"
   - echo y | "%ANDROID_HOME%\tools\android" update sdk --no-ui --all --filter "android-25"
-  - echo y | %ANDROID_HOME%\tools\android update sdk --no-ui --all --filter "build-tools-23.0.0"
+  - echo y | "%ANDROID_HOME%\tools\android" update sdk --no-ui --all --filter "build-tools-23.0.0"
   - echo y | "%ANDROID_HOME%\tools\android" update sdk --no-ui --all --filter "android-23"
 
   # - echo y | "C:\ProgramData\Microsoft\AndroidNDK\android-ndk-r10e\tools\android" update sdk --no-ui --all --filter "platform-tools"
