--- a/appveyor.yml
+++ b/appveyor.yml
@@ -14,6 +14,10 @@ install:
 
   - echo y | "%ANDROID_HOME%\tools\android" update sdk --no-ui --all --filter "platform-tools"
   - echo y | "%ANDROID_HOME%\tools\android" update sdk --no-ui --all --filter "tools"
+  - echo y | "%ANDROID_HOME%\tools\android" update sdk --no-ui --all --filter "build-tools-23.0.0"
+  - echo y | "%ANDROID_HOME%\tools\android" update sdk --no-ui --all --filter "android-23"
+  - echo y | "%ANDROID_HOME%\tools\android" update sdk --no-ui --all --filter "build-tools-25.0.0"
+  - echo y | "%ANDROID_HOME%\tools\android" update sdk --no-ui --all --filter "android-25"
   - echo y | "%ANDROID_HOME%\tools\android" update sdk --no-ui --all --filter "build-tools-27.0.0"
   - echo y | "%ANDROID_HOME%\tools\android" update sdk --no-ui --all --filter "android-27"
 
