--- a/appveyor.yml
+++ b/appveyor.yml
@@ -18,8 +18,8 @@ install:
   - echo y | "%ANDROID_HOME%\tools\android" update sdk --no-ui --all --filter "android-23"
   - echo y | "%ANDROID_HOME%\tools\android" update sdk --no-ui --all --filter "build-tools-25.0.0"
   - echo y | "%ANDROID_HOME%\tools\android" update sdk --no-ui --all --filter "android-25"
-  - echo y | "%ANDROID_HOME%\tools\android" update sdk --no-ui --all --filter "build-tools-27.0.0"
-  - echo y | "%ANDROID_HOME%\tools\android" update sdk --no-ui --all --filter "android-27"
+
+  - cp -rf "%ANDROID_HOME%\platforms\android-23" "C:\ProgramData\Microsoft\AndroidNDK\android-ndk-r10e\platforms\"
 
   # - echo y | "C:\ProgramData\Microsoft\AndroidNDK\android-ndk-r10e\tools\android" update sdk --no-ui --all --filter "platform-tools"
   # - echo y | "C:\ProgramData\Microsoft\AndroidNDK\android-ndk-r10e\tools\android" update sdk --no-ui --all --filter "tools"
